testdata/baselines/reference/submodule/compiler/sigantureIsSubTypeIfTheyAreIdentical.errors.txt
sigantureIsSubTypeIfTheyAreIdentical.ts(6,9): error TS2322: Type 'undefined' is not assignable to type 'T'.


==== sigantureIsSubTypeIfTheyAreIdentical.ts (1 errors) ====
    interface ICache {
        get<T>(key: string): T;
    }
    class CacheService implements ICache { // Should not error that property type of get are incomaptible
        get<T>(key: string): T {
            return undefined;
            ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'T'.
        }
    }